fix legend alignment
basically just copied mobile code - should be all good now.

--- a/src/App.css
+++ b/src/App.css
@@ -387,6 +387,46 @@ button:disabled,
 }
 
 @media screen and (max-width: 1300px) and (min-width: 770px) {
+  .hero-body .container {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+
+  .hero-body .container .title {
+    padding-left: 15px;
+  }
+
+  .alerts {
+    grid-template-areas: 'left-gutter alerts right-gutter';
+    grid-template-columns: 46px 1fr 8px;
+  }
+
+  .alerts-bar {
+    height: 30px;
+  }
+
+  .alerts .legend {
+    display: none;
+  }
+
+  .chart-extras {
+    margin-left: 44px;
+    display: flex;
+    justify-content: space-between;
+  }
+
+  .chart-extras .legend {
+    display: grid;
+    grid-template-rows: repeat(3, 1fr);
+    grid-auto-flow: column;
+    column-gap: 10px;
+  }
+
+  .chart-extras .control {
+    margin-right: 25px;
+    margin-bottom: 10px;
+  }
+  
   .station-configuration {
     display: grid;
     grid-template-columns: .5fr 1fr 1fr 40px;
